removes useless applyStyle(), implements .css method, moves static styling to stylesheet

--- a/style.css
+++ b/style.css
@@ -54,10 +54,13 @@ table {
 #title {
   position: absolute;
   width: fit-content;
+  top: 5px;
 }
 
 #y-axis {
   position: absolute;
+  width: 1px;
+  background-color: black;
 }
 
 #y-label {
@@ -65,10 +68,13 @@ table {
   transform-origin: top left;
   transform: rotate(-90deg);
   width: fit-content;
+  left: 5px
 }
 
 #x-axis {
   position: absolute;
+  height: 1px;
+  background-color: black;
 }
 
 #x-label {
