--- a/style.css
+++ b/style.css
@@ -95,3 +95,13 @@ table {
   position: absolute;
   width: fit-content
 }
+
+.scale-mark {
+  position: absolute;
+}
+
+.scale-line {
+  position: absolute;
+  height: 1px;
+  background-color: lightgray;
+}
